--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
